getMagic / GetHeaders hash / MessageHeader.length / bootstrap connection error / getLatestHeight / half package